# cdd-gateway

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.md  CDD_CTL.md  Cargo.toml  DEPLOYMENT.md  DEVELOPING.md  Makefile  PLANNN.md  README.md  TO_DOCS_JSON.md  USAGE.md  WASM.md  alpine.Dockerfile  build.zig  build.zig.zon  cdd_docs_prompt.md  coverage_table.txt  current_coverage_table.txt  debian.Dockerfile  make.bat  openapi.json  remove_purpose_prefix.py  test_patch.rs  write_gateway_api.py  write_gateway_mcp.py
.github/workflows/: ci.yml  release.yml
cdd-ctl-wasm-sdk/: .npmignore  README.md  check_pypi.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
cdd-ctl-wasm-sdk/assets/: wasm-support.json
cdd-ctl-wasm-sdk/src/: index.ts
cdd-ctl-wasm-sdk/tests/: index.test.ts
cdd-dir/: cdd-mock-fail  cdd-mock-success
cdd-gateway-wasm-sdk/assets/: wasm-support.json
migrations/2026-03-21-235648-0001_create_organization_users/: down.sql
migrations/2026-03-21-235648-0002_create_repositories/: up.sql
migrations/2026-03-21-235648-0003_create_releases/: up.sql
migrations/20260321235600_create_users/: up.sql
migrations/20260321235648_create_organizations/: up.sql
migrations/20260321235649_create_organization_users/: up.sql
scripts/: build-wasm-all.mjs  fetch_wasm.bat  fetch_wasm.sh  update_shields.sh
scripts/dummy-wasm/: Cargo.toml
scripts/dummy-wasm/src/: main.rs
src/: cli.zig  config.rs  daemon.rs  error.rs  graalvm_linker.rs  lib.rs  logger.zig  main.rs  main.zig  process.zig  proxy.rs  proxy_test_utils.rs  rate_limit.rs  root.zig  server.zig  wasm_executor.rs
src/api/: auth.rs  auth_middleware.rs  github.rs  mod.rs  orgs.rs  repos.rs  rpc.rs
src/db/: mod.rs  models.rs  repository.rs  schema.rs
src/db/tests/: mod.rs  org_tests.rs  release_tests.rs  repo_tests.rs  user_tests.rs
src/github/: client.rs  mod.rs  models.rs
src/mcp/: mod.rs
tests/: main_test.rs
