[package]
name = "cdd-ctl"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-identity = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "5.3.1", features = ["actix_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
oauth2 = "4.4"
chrono = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"
derive_more = "1.0"
thiserror = "2.0"
clap = { version = "4.5.60", features = ["derive"] }
anyhow = "1.0.102"
tokio-util = "0.7.18"
rand = { version = "0.10.0", features = ["std"] }
config = "0.15.19"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
actix-web-httpauth = "0.8.2"
async-trait = "0.1.89"
mockall = "0.14.0"
argon2 = { version = "0.5.3", features = ["std", "password-hash"] }
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
base64 = "0.22.1"

[dev-dependencies]
async-trait = "0.1.89"
mockall = "0.14.0"
